--- a/index.html
+++ b/index.html
@@ -7,6 +7,13 @@
     <link rel="stylesheet" href="./style.css">
 </head>
 <body>
+    <header></header>
+    <main>
+        <div class="gameboard-grid-container">
+            
+        </div>
+    </main>
+    <footer></footer>
     <script src="./script.js"></script>
 </body>
 </html>
