Create place to hold score of each player

--- a/index.html
+++ b/index.html
@@ -7,10 +7,19 @@
     <link rel="stylesheet" href="./style.css">
 </head>
 <body>
-    <header></header>
+    <header>
+        <section class="p1-score">
+            <h2 class="p1-name"></h2>
+            <h2 class="p1-score"></h2>
+        </section>
+        <section class="p2-score">
+            <h2 class="p2-name"></h2>
+            <h2 class="p2-score"></h2>
+        </section>
+    </header>
     <main>
         <div class="gameboard-grid-container">
-            
+
         </div>
     </main>
     <footer></footer>
