Create buttons to reset game or move to next round

--- a/index.html
+++ b/index.html
@@ -21,6 +21,10 @@
         <div class="gameboard-grid-container">
 
         </div>
+        <div class="btns-container">
+            <button class="next-round-btn" type="button">Next Round</button>
+            <button class="reset-btn">Reset Game</button>
+        </div>
     </main>
     <footer></footer>
     <script src="./script.js"></script>
