Create a place to display announcements

--- a/index.html
+++ b/index.html
@@ -16,6 +16,9 @@
             <h2 class="p2-name"></h2>
             <h2 class="p2-score"></h2>
         </section>
+        <section class="announcements-container">
+            
+        </section>
     </header>
     <main>
         <div class="gameboard-grid-container">
