Make a footer to point to github

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
             <h2 class="p2-score"></h2>
         </section>
         <section class="announcements-container">
-            
+
         </section>
     </header>
     <main>
@@ -29,7 +29,9 @@
             <button class="reset-btn">Reset Game</button>
         </div>
     </main>
-    <footer></footer>
+    <footer class="footer-container">
+        <h3>Made By <a class="footer-link" href="https://github.com/basselalrefai">Bassel Alrefai</a></h3>
+    </footer>
     <script src="./script.js"></script>
 </body>
 </html>
