--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tic-Tac-Toe By Bassel Alrefai TOP</title>
     <link rel="stylesheet" href="./style.css">
+    <link rel="stylesheet" href="./Reset.CSS">
 </head>
 <body>
     <header>
