Add class to not repeat styles

--- a/index.html
+++ b/index.html
@@ -26,8 +26,8 @@
 
         </div>
         <div class="btns-container">
-            <button class="next-round-btn" type="button">Next Round</button>
-            <button class="reset-btn">Reset Game</button>
+            <button class="next-round-btn btn" type="button">Next Round</button>
+            <button class="reset-btn btn">Reset Game</button>
         </div>
     </main>
     <footer class="footer-container">
