--- a/index.html
+++ b/index.html
@@ -23,7 +23,15 @@
     </header>
     <main>
         <div class="gameboard-grid-container">
-
+            <div>X</div>
+            <div>X</div>
+            <div>X</div>
+            <div>X</div>
+            <div>X</div>
+            <div>X</div>
+            <div>X</div>
+            <div>X</div>
+            <div>X</div>
         </div>
         <div class="btns-container">
             <button class="next-round-btn btn" type="button">Next Round</button>
