--- a/index.html
+++ b/index.html
@@ -9,13 +9,13 @@
 </head>
 <body>
     <header>
-        <section class="p1-score">
-            <h2 class="p1-name"></h2>
-            <h2 class="p1-score"></h2>
+        <section class="p1-score score-container">
+            <h2 class="p1-name name">Player 1:</h2>
+            <h2 class="p1-score score">3</h2>
         </section>
-        <section class="p2-score">
-            <h2 class="p2-name"></h2>
-            <h2 class="p2-score"></h2>
+        <section class="p2-score score-container">
+            <h2 class="p2-name name">Player 2:</h2>
+            <h2 class="p2-score score">0</h2>
         </section>
         <section class="announcements-container">
 
