--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             <h2 class="p2-score score">0</h2>
         </section>
         <section class="announcements-container">
-
+            <h2 class="announcement">You Won!</h2>
         </section>
     </header>
     <main>
