Add extra class to reference in JS

--- a/index.html
+++ b/index.html
@@ -11,11 +11,11 @@
     <header>
         <section class="p1-score score-container">
             <h2 class="p1-name name">Player 1:</h2>
-            <h2 class="p1-score score">3</h2>
+            <h2 class="p1-score p1-score-num score">3</h2>
         </section>
         <section class="p2-score score-container">
             <h2 class="p2-name name">Player 2:</h2>
-            <h2 class="p2-score score">0</h2>
+            <h2 class="p2-score p2-score-num score">0</h2>
         </section>
         <section class="announcements-container">
             <h2 class="announcement">You Won!</h2>
