--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
 
     <div class="wrapper">
-        <form >
+        <form class="form" >
             <p class="p-text">
                 <label for="p1-name">Player 1: </label>
                 <input class="text-input" type="text" name="p1-name" id="p1-name" required/>
