Make radio btn required

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
             <p class="p-radio">
                 <label class="radio-label" for="x-symbol">X</label>
-                <input class="radio-input" type="radio" name="symbol" id="x-symbol" value="X"/>
+                <input class="radio-input" type="radio" name="symbol" id="x-symbol" value="X" required/>
                 <label class="radio-label" for="o-symbol">O</label>
                 <input class="radio-input" type="radio" name="symbol" id="o-symbol" value="O">
             </p>
